--- a/ConsoleApp1/WpfApp1/MainWindow.xaml
+++ b/ConsoleApp1/WpfApp1/MainWindow.xaml
@@ -8,9 +8,9 @@
         Title="MainWindow" Height="450" Width="800">
     <Grid>
         <Label Content="lista" HorizontalAlignment="Center" Margin="0,29,0,0" VerticalAlignment="Top"/>
-        <ListBox x:Name="listbox" Height="100" Margin="60,68,60,0" VerticalAlignment="Top"/>
+        <ListBox x:Name="listbox" Height="100" Margin="60,68,60,0" VerticalAlignment="Top" KeyDown="Listbox_KeyDown"/>
         <StackPanel HorizontalAlignment="Center" Margin="0,224,0,0" VerticalAlignment="Top" Orientation="Horizontal">
-            <TextBox x:Name="item_textbox" Height="23" TextWrapping="Wrap" Text="TextBox" Width="200" TextChanged="TextBox_TextChanged"/>
+            <TextBox x:Name="item_textbox" Height="23" TextWrapping="Wrap" Width="200" TextChanged="TextBox_TextChanged" KeyDown="Item_textbox_KeyDown"/>
             <Button x:Name="add_button" Content="adicionar" Click="Add_button_Click"/>
         </StackPanel>
 
