--- a/ConsoleApp1/WpfApp1/MainWindow.xaml
+++ b/ConsoleApp1/WpfApp1/MainWindow.xaml
@@ -10,9 +10,17 @@
         <Label Content="lista" HorizontalAlignment="Center" Margin="0,29,0,0" VerticalAlignment="Top"/>
         <ListBox x:Name="listbox" Height="100" Margin="60,68,60,0" VerticalAlignment="Top" KeyDown="Listbox_KeyDown"/>
         <StackPanel HorizontalAlignment="Center" Margin="0,224,0,0" VerticalAlignment="Top" Orientation="Horizontal">
-            <TextBox x:Name="item_textbox" Height="23" TextWrapping="Wrap" Width="200" TextChanged="TextBox_TextChanged" KeyDown="Item_textbox_KeyDown"/>
+            <TextBox x:Name="item_textbox" Height="23" TextWrapping="Wrap" Width="200"  KeyDown="Item_textbox_KeyDown"/>
             <Button x:Name="add_button" Content="adicionar" Click="Add_button_Click"/>
         </StackPanel>
+        <Menu Margin="0" VerticalAlignment="Top" Height="23">
+            <MenuItem x:Name="menu_abrir" Header="ABRIR" Click="Menu_abrir_Click"></MenuItem>
+            <MenuItem x:Name="menu_salvar" Header="SALVAR" Click="Menu_salvar_Click"></MenuItem>
+
+        </Menu>
+        <StatusBar Height="30" VerticalAlignment="Bottom">
+            <Label x:Name="status" Content="Label"/>
+        </StatusBar>
 
     </Grid>
 </Window>
