--- a/ConsoleApp1/WpfApp1/MainWindow.xaml
+++ b/ConsoleApp1/WpfApp1/MainWindow.xaml
@@ -37,7 +37,7 @@
         <Label Foreground="White" Content="lista" HorizontalAlignment="Center" Margin="0,29,0,0" VerticalAlignment="Top"/>
         <ListBox Grid.RowSpan="3" Grid.Column="1" x:Name="listbox" Foreground="Black"  Margin="60,68,60,0" VerticalAlignment="Stretch" KeyDown="Listbox_KeyDown"/>
         <StackPanel Grid.Column="1" Margin="0,10,60,0" HorizontalAlignment="Right" Grid.Row="3" VerticalAlignment="Top" Orientation="Horizontal">
-            <TextBox Foreground="White" x:Name="item_textbox" Height="23" TextWrapping="Wrap" Width="200"  KeyDown="Item_textbox_KeyDown"/>
+            <TextBox Foreground="Black"  Background="White" x:Name="item_textbox" Height="23" TextWrapping="Wrap" Width="200"  KeyDown="Item_textbox_KeyDown" TextChanged="Item_textbox_TextChanged"/>
             <Button x:Name="add_button" Content="adicionar" Click="Add_button_Click"/>
         </StackPanel>
         <!--<Menu Grid.RowSpan="6" Grid.Column="0" Margin="0,0,0,0" VerticalAlignment="Stretch" Background="#1A2630">
@@ -48,7 +48,7 @@
         <StatusBar Grid.Row="5" Grid.ColumnSpan="2" Height="30" VerticalAlignment="Bottom">
             <Label x:Name="status" Content="Label"/>
         </StatusBar>
-        <Button Grid.Column="1" Grid.Row="3" x:Name="mudar_status" Content="mudar status" Height="20" VerticalAlignment="Top" HorizontalAlignment="Left" Width="76" Margin="60,10,0,0" Click="Mudar_status_Click"/>
+        <Button Grid.Column="1" Grid.Row="3" x:Name="mudar_status" Content="mudar status" Height="20" VerticalAlignment="Top" HorizontalAlignment="Left" Width="90" Margin="60,10,0,0" Click="Mudar_status_Click"/>
         <StackPanel Orientation="Horizontal" Grid.Row="0" Grid.Column="1" Margin="55,50,0,0">
             <CheckBox Grid.Column="1" x:Name="Mostrar_somente_prontos" Content="Mostrar somente prontos" HorizontalAlignment="Left" Margin="0,0,0,0" VerticalAlignment="Top" Checked="Mostrar_somente_prontos_Checked" Unchecked="Mostrar_somente_prontos_Unchecked"/>
             <CheckBox Grid.Column="1" Margin="10,0,0,0" x:Name="Mostrar_somente_nao_prontas" Content="Mostrar somente não prontas" HorizontalAlignment="Left"  VerticalAlignment="Top" Checked="Mostrar_somente_nao_prontas_Checked" Unchecked="Mostrar_somente_nao_prontas_Unchecked"/>
