--- a/ConsoleApp1/tutorial mvc/MainWindow.xaml
+++ b/ConsoleApp1/tutorial mvc/MainWindow.xaml
@@ -11,10 +11,13 @@
         <vm:MainWindowViewModel x:Name="vm"/>
     </Window.DataContext>
     <Grid Background="Black" >
-        <StackPanel Orientation="Horizontal">
-            <StackPanel Background="#33808080" VerticalAlignment="Bottom">
-                <Button Content="Play" Click="Button_Click" Command="{Binding PlayCommand}" ></Button>
-                <Button Content="" Width="20" Height="200" Background="#7F527A4A"></Button>
+        <Grid.RowDefinitions>
+            <RowDefinition/>
+            <RowDefinition/>
+        </Grid.RowDefinitions>
+       <StackPanel Grid.Row="1" Orientation="Horizontal">
+            <StackPanel Background="#33808080" VerticalAlignment="Top">
+                <Button Content="{Binding BtPlayText}" Command="{Binding PlayCommand}" ></Button>
                 <StackPanel Margin="20,0,0,0" HorizontalAlignment="Left" VerticalAlignment="Center" Orientation="Horizontal" >
                 <ProgressBar Margin="0,0,0,0" Minimum="0" Orientation="Vertical" Maximum="100" Value="{Binding Volume}" Height="100" Width="4"/>
                 <Slider Opacity="0.5" Width="20" Margin="-11,4,0,0" Height="100" Value="{Binding Volume}" Minimum="0" Maximum="100" Orientation="Vertical"  />
@@ -22,5 +25,9 @@
             </StackPanel>
          </StackPanel>
         </StackPanel>
+        <Canvas Grid.Row="0" Height="100" Background="#FF2B2B2B" >
+            <Line
+                X1="{Binding LineX}" Y1="0"    X2="{Binding LineX}" Y2="100"    Stroke="LightGreen"     StrokeThickness="2"/>
+        </Canvas>
     </Grid>
 </Window>
